# spbitnet

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES
benchmarks/: bench_kernels.cu
docs/: benchmarks.md  compression_format.md  kernel_design.md
include/spbitnet/: cuda_utils.h  cusparselt_backend.h  inference.h  inference_kernels.h  model.h  profiler.h  sparse_ternary_kernels.h  sparse_ternary_tensor.h  ternary_kernels.h  ternary_tensor.h  tokenizer.h
python/: analyze_profile.py  baseline_pytorch.py  convert_model.py  generate_sparse_mask.py  plot_benchmarks.py  requirements.txt
scripts/: profile_ncu.sh
src/: cusparselt_backend.cu  inference.cu  main.cpp  model.cu  tokenizer.cpp
src/kernels/: inference_kernels.cu  sparse_ternary.cu  ternary_pack.cu
tests/: test_cusparselt.cu  test_inference_kernels.cu  test_model_loader.cu  test_sparse_ternary.cu  test_ternary_pack.cu  test_tokenizer.cpp
